approach section completed

--- a/report/citation.bib
+++ b/report/citation.bib
@@ -118,3 +118,12 @@
   pages={1594--1603},
   year={2017}
 }
+
+@inproceedings{liu2017deep,
+  title={Deep learning for extreme multi-label text classification},
+  author={Liu, Jingzhou and Chang, Wei-Cheng and Wu, Yuexin and Yang, Yiming},
+  booktitle={Proceedings of the 40th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  pages={115--124},
+  year={2017},
+  organization={ACM}
+}
