--- a/report/citation.bib
+++ b/report/citation.bib
@@ -127,3 +127,22 @@
   year={2017},
   organization={ACM}
 }
+
+@article{lecun1998gradient,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick and others},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={Taipei, Taiwan}
+}
+
+@article{lecun2015lenet,
+  title={LeNet-5, convolutional neural networks},
+  author={LeCun, Yann and others},
+  journal={URL: http://yann. lecun. com/exdb/lenet},
+  volume={20},
+  year={2015}
+}
