densenet for cifar

--- a/report/project.tex
+++ b/report/project.tex
@@ -223,6 +223,9 @@ The model is trained with 3 different loss function. First loss function is CE l
 % graphs,
 
 
+densenet ~\cite{huang2017densely}
+
+
 \section{Case study}
 
 
